<resources>
    <string name="app_name">CameraApp</string>
    <string name="open_camera">Open Camera</string>
    <string name="gallery">Gallery</string>
    <string name="no_enough_permission">No enough permissions(CAMERA, RECORD_AUDIO, WRITE_EXTERNAL_STORAGE)</string>
    <string name="recording">Recording</string>
    <string name="record">Record</string>
    <string name="shot">Shot</string>
    <string name="cancel">Cancel</string>
    <string name="image_mode">Image Mode</string>
    <string name="video_mode">Video Mode</string>
    <string name="finish">Finish</string>
    <string name="flip">Flip</string>
    <string name="play_file">Play[%s]</string>
    <string name="done">Done</string>
    <string name="fill">Fill</string>
    <string name="zoom">Zoom</string>
    <string name="video_size">Video size</string>
    <string name="image_size">Image size</string>
    <string name="ratio">Ratio</string>
    <string name="flash_auto">Auto</string>
    <string name="flash_on">On</string>
    <string name="flash_off">Off</string>
</resources>
