<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <top.defaults.video.AutoFitTextureView
        android:id="@+id/texture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_above="@+id/actions_layout"
        android:gravity="center_horizontal"
        android:text="@string/recording"
        android:textSize="14sp"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <RelativeLayout
        android:id="@+id/actions_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignBottom="@+id/texture"
        android:background="#7fffffff"
        android:fitsSystemWindows="true">

        <Button
            android:id="@+id/video"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:text="@string/record"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/flip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:text="@string/flip" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/chooseVideoSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/screen_resolution"/>

        <CheckBox
            android:id="@+id/fillSpace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fill"
            android:textColor="#ffffff"/>
    </LinearLayout>

</RelativeLayout>
